# iris-project

./: LICENSE  Makefile  README.md  make.py  pyproject.toml
.github/workflows/: data_pipeline.yml  model_training.yml  predict.yml
conf/: job_config.json
data_processing/bronze/: ingest_bronze.py
data_processing/silver/: clean_data.py  validate_data.py
iris_project/: config.py
iris_project/features/: engineering.py  preprocessing.py
iris_project/modeling/: data_loader.py  eval.py  mlflow_logger.py  models.py  pipeline_builder.py  trainer.py
iris_project/pipelines/: feature_pipeline.py  inference_pipeline.py  training_pipeline.py
iris_project/serving/: app.py
tests/features/: test_engineering.py  test_preprocessing.py
tests/modeling/: test_models.py  test_pipeline_builder.py  test_trainer.py
tests/pipelines/: test_integration.py
